# Used_Cars_Price_Prediction

./: .gitignore  README.md  app.py  demo.py  main.py  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv
artifacts/: best_model.joblib  metrics.json  model_comparison.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: EDA.ipynb
src/: config.py  inference.py  preprocessing.py  schemas.py  training.py  utils.py
